Fix for header overlapping with content

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,7 @@
+#main-content{
+  margin-top: 100px;
+}
+
 .header .navbar-brand span:first-child{
     color: white;
 }
